body overflow fix

--- a/app/assets/stylesheets/_new_dev.sass
+++ b/app/assets/stylesheets/_new_dev.sass
@@ -19,6 +19,8 @@ body
   font-family: "ProximaNova", Arial, Helvetica, sans-serif
   -webkit-font-smoothing: antialiased
   font-size: 16px
+  overflow-x: hidden
+  width: 100vw
 
 sup
   top: -0.2em
